Update README, copy README into archetype during build